--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -64,7 +64,7 @@
   }
 }
 
-@media only screen and (max-width: 767px) {
+@media (max-width: 767px) {
   .client {
     &__item {
       width: 210px;
