--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -49,6 +49,7 @@
     border: 1px solid $border-white;
     border-top: none;
   }
+
   &__title {
     margin-bottom: 4px;
     font-weight: $bold-weight;
@@ -56,6 +57,7 @@
     letter-spacing: $main-letter;
     line-height: 2;
   }
+
   &__text {
     font-weight: $regular-weight;
     font-size: $secondary-size;
@@ -89,7 +91,7 @@
 @include screen-480 {
   .project {
     &__item {
-      min-width: 450px;
+      width: 450px;
       height: 404px;
       flex-basis: none;
     }
