--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -11,6 +11,7 @@
   }
 
   &__item {
+    width: 270px;
     flex-basis: calc((100% - 90px) / 4);
     text-align: center;
     background-color: $main-white-color;
