Flex-wrap arreglado en project

--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -90,6 +90,10 @@
 
 @include screen-480 {
   .project {
+    flex-direction: column;
+    flex-wrap: nowrap;
+
+
     &__item {
       width: 450px;
       height: 404px;
